# knowledge-augmented-LM

./: README.md  complexwebq.csv  evaluation_result.csv  mintaka.csv  out.txt  pyproject.toml  test.ipynb  webqsp.csv
resources/: preprocess.py
resources/WebQSP/data/: WebQSP.test.processed.json  WebQSP.train.processed.json
src/: app.py
src/dataset/: __init__.py  complex_web_q.py  kgqa_data.py  kgqa_dataset.py  metaqa.py  mintaka.py  web_qsp.py
src/kaping/: __init__.py  embedding.py  evaluate.py  kaping.py  metrics.py  modules.py
src/kgppr/: __init__.py  evaluate.py  kgppr.py  metrics.py  modules.py
src/knowledge_graph/: __init__.py  data.py  retriever.py  wikidata.py
src/llm/: model.py
src/retriever/: retriever.py
src/settings/: config.py
test/dataset/: kgqa_dataset.py
test/kaping/: apptest.py
test/knowledge_graph/: wikidata.py
test/llm/: model.py
